<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtPartidaReiniciada">¡Partida Reiniciada!</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Resultado -->
    <string name="txtResultadoGuardado">Se ha guardado el resultado con id:</string>
    <string name="txtErrorResultadoGuardado">Ha habido un error al guardar el resultado.</string>
    <string name="txtButtonEliminarResultados">Eliminar resultados</string>
    <string name="txtNoResultadosParaEliminar">No hay resultados para eliminar</string>

        <!-- Diálogo Eliminar Resultados-->
        <string name="txtDialogoEliminarResultadosTitulo">eliminar Resultados</string>
        <string name="txtDialogoEliminarResultadosPregunta">¿Deseas eliminar los resultados?</string>
        <string name="txtDialogoeliminarResultadosAfirmativo">Sí</string>
        <string name="txtDialogoEliminarResultadosNegativo">No</string>


    <!-- Guardar Partida -->
    <string name="txtPartidaGuardada">¡Partida Guardada!</string>
    <string name="txtErrorPartidaGuardada">Error al Guardar la Partida.</string>

    <!-- Recuperar Partida -->
    <string name="txtNoFichero">No hay ninguna partida guardada que recuperar.</string>
    <string name="txtErrorRecuperarPartida">Error al Recuperar la Partida.</string>
    <string name="txtPartidaRecuperada">¡Partida Recuperada!</string>

        <!-- Diálogo Recuperar Partida -->
        <string name="txtDialogoRecuperarPartidaTitulo">Recuperar Partida</string>
        <string name="txtDialogoRecuperarPartidaPregunta">La partida actual es distinta a la partida guardada que intentas recuperar. ¿Deseas recuperarla de todos modos?</string>
        <string name="txtDialogoRecuperarPartidaAfirmativo">Sí</string>
        <string name="txtDialogoRecuperarPartidaNegativo">No</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Diálogo Reiniciar -->
    <string name="txtDialogoReiniciarTitulo">Reiniciar</string>
    <string name="txtDialogoReiniciarPregunta">¿Desea reiniciar la partida?</string>
    <string name="txtDialogoReiniciarAfirmativo">Sí</string>
    <string name="txtDialogoReiniciarNegativo">No</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloMostrarCronometro">Mostrar cronometro</string>
    <string name="prefTituloMostrarFichasRestantes">Mostrar fichas restantes</string>

    <!-- Informacion Partida -->
    <string name="txtFichasRestantes">Fichas restantes: </string>
    <string name="txtCronometro">Tiempo: </string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>