<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="opc_Fichero"
        android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="nombreJugador"
            android:summary="@string/prefTextoNombreJugador"
            android:title="@string/prefTituloNombreJugador" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria2">
        <SwitchPreference
            android:defaultValue="true"
            android:key="mostrarCronometro"
            android:title="@string/prefTituloMostrarCronometro" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="mostrarFichasRestantes"
            android:title="@string/prefTituloMostrarFichasRestantes" />
    </PreferenceCategory>
</PreferenceScreen>
